# refactoring

./: .gitignore  CMakeLists.txt  DataManager.cpp  DataManager.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: DataManager.cpp  DataManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
